--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "15.5.3",
+    "next": "16.1.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "strapi-sdk-js": "^3.0.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
