--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.94.0",
+    "dotenv": "^17.2.3",
     "next": "16.1.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "supabase": "^2.75.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
